Version 2.0.8 - 08-06-2016
--------------------------
- ASUS OEM LiveUpdate module added
- Fixed ReadLine::Gnu bug
- Improved README.md
- Added a 2 new configuration variables <%URL_FILE%> and <%URL_FILE_EXT%>
- ACER Care Center Live Update module added
- OpenBazaar module added

Version 2.0.7 - 03-06-2016
--------------------------
- (Samsung SW Update Tool 2.2.5.16) samsung module added
- (Intel Driver Update Utility 2.2.0.5) inteldriver module added
- Keepass CVE-2016-5119,  keepass module added
- Lenovo's OEM modules, (lenovo,lenovoapk, lenovofirmware) modules added
- timedoctor module added


Version 2.0.6 - 17-01-2014
--------------------------
-Adding support to Faraday www.faradaysec.com - RPC Api connection


Version 2.0.5 - 06-05-2013
--------------------------
- Adding support for Windows by Elian Gidoni
- sunjava module add Java Security Warning Bypass found by Esteban Guillardoy (__applet_ssv_validated parameter)
- update last version dap module

Version 2.0.4 - 07-11-2011
--------------------------
- sunjava module updated. Support Java <=1.6.0.28

Version 2.0.3 - 18-10-2011
---------------------------
-(Java Deployment Toolkit <= v6.0.240.7 found by Neal Poole) - jdtoolkit module added

Version 2.0.2 - 17-10-2011
---------------------------
- CVE-2011-3230 - (Safari 5.1.1) safari module added
- CVE-2011-3224 - (Mac App Store) appstore module added
Found by Aaron Sigel and Brian Mastenbrook

Version 2.0.1 - 07-07-2011
---------------------------
- MacPorts 1.9.2 (port) module added


Version 2.0.0 - 29-10-2010
---------------------------

Modules:
-------

Last Versions:
-------------

- Freerip 3.30
- Jet photo 4.7.2
*- Teamviewer 5.1.9385
- ISOpen 4.5.0
- Istat
- Gom 2.1.25.5015
- Atube catcher 1.0.300
- Vidbox 7.5
- Ccleaner 2.30.1130
- Fcleaner 1.2.9.409
- Allmynotes 1.26
*- Notepad++ 5.8.2
*- Java 1.6.0_22  winxp/win7
- aMSN 0.98.3
*- Appleupdate <= 2.1.1.116 ( Safari 5.0.2 7533.18.5, <= Itunes 10.0.1.22, <= Quicktime 7.6.8 1675)
*- Mirc 7.14